# QuadraticApproximation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Resources.conf
Data/: points.txt  points_catmullrom.txt
Source/: Application.cpp  Application.h  Application.html  QuadraticApproximationApp.cpp  QuadraticApproximationApp.h  QuadraticCurveApproximation.cpp  QuadraticCurveApproximation.h
Source/Application/: GLApplication.cpp  GLApplication.h  ImGuiApplication.cpp  ImGuiApplication.h  PickableApplication.cpp  PickableApplication.h
Source/Camera/: ArcBall.cpp  ArcBall.h  ArcBallCamera.h
Source/DrawableObjects/: FlatShadeObject.h  Grid.cpp  Grid.h  PickableObject.cpp  PickableObject.h
Source/DrawableObjects/Curves/: CubicBezier.h  CubicBezierCurve.cpp  CubicBezierCurve.h  Curve.cpp  Curve.h  Polyline.h  QuadraticApproximatingCubic.h  QuadraticBezierCurve.cpp  QuadraticBezierCurve.h
Source/Shaders/: LineShader.cpp  LineShader.h
WebGL/: QuadraticApproximation.js  QuadraticApproximation.wasm
